# dioxus-articulos

./: .gitignore  Cargo.toml  Dioxus.toml  Makefile.toml  bun.lockb
public/: tailwind.css
src/: app.rs  lib.rs  main.rs
src/domain/: articulo.rs  detalle.rs  mod.rs  precio.rs
src/infrastructure/models/: articulo_dto.rs  mod.rs
src/infrastructure/ui/: mod.rs
src/infrastructure/ui/components/: articulo_card.rs  articulo_list.rs  mod.rs  modal.rs  navbar.rs  search_bar.rs
src/infrastructure/ui/hooks/: mod.rs  use_articulo.rs
src/infrastructure/ui/routes/: home.rs  login.rs  mod.rs
src/mocks/: articulos.json  articulos_input.json  cajtpv.json  familias.json  paneles.json
src/models/: articulo.rs  articulo_dto.rs  cajtpv.rs  familias.rs  mod.rs  paneles.rs  paneles_dto.rs
