[package]
name = "articulos"
version = "0.1.0"
authors = ["agarces"]
edition = "2021"

[lib]
name = "articulos"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus-desktop = { version = "0.4" }
dioxus = { version = "0.4" }

dioxus-router = { version = "0.4" }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tiberius = { version = "0.12.2", features = ["chrono", "bigdecimal"] }
anyhow = "1.0.76"
async-std = "1.12.0"

